# slovenia-traffic-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml
data/: DATA_SOURCES.md  legend_english.md
data/processed/: accident_risk_thresholds.json  accident_traffic_merged.parquet  accidents_with_traffic_conditions.csv  model_performance.json  (+1 more)
docs/: Slovenian Road Segment Analysis.md  Slovenian Traffic Data Analysis Plan.md  methodologies_review.md
notebooks/: 02_trend_analysis.ipynb  03_data_quality_features.ipynb  04_weather_integration.ipynb  05_hypothesis_roadworks.ipynb  08_incident_analysis_enhanced.ipynb  08_incident_analysis_enhanced_SI.ipynb  08_roadwork_impact_assessment.ipynb  08a_speed_density_accident_risk.ipynb  08a_speed_density_accident_risk_SI.ipynb  09_international_transit_analysis.ipynb  10_smart_lane_management_evaluation.ipynb  11_tourist_vs_commuter_analysis.ipynb  12_economic_impact_assessment.ipynb  13_roadwork_optimization_analysis.ipynb  14_sensor_inventory.ipynb  15_data_integration_pipeline.ipynb  16_feature_engineering.ipynb  17_data_splitting.ipynb  18_calendar_features.ipynb  19_data_quality.ipynb  20_feature_importance.ipynb  21_cross_validation.ipynb  22_feature_store.ipynb  23_eda_dashboard.ipynb  24_pipeline_automation.ipynb  25_data_dictionary.ipynb  30_xgboost_framework.ipynb  31_vehicle_count_models.ipynb  32_speed_models.ipynb  33_hyperparameter_tuning.ipynb  34_model_validation.ipynb  35_feature_importance_shap.ipynb  36_temporal_validation.ipynb  37_weather_impact_analysis.ipynb  38_model_comparison.ipynb  39_ensemble_models.ipynb  40_port_truck_volume_analysis.ipynb  41_port_truck_temporal_patterns.ipynb  42_port_contribution_to_congestion.ipynb  50_truck_trends_analysis.ipynb  (+10 more)
scripts/: collect_weather_data.py  create_economic_data.py  create_holiday_calendar.py  economic_audit.py  economic_model_verification.py  extract_accident_risk_figures.py  extract_economic_figures.py  extract_figures_tables.py  extract_key_figures.py  extract_tables_advanced.py  fix_figures.py  generate_article_figures.py  generate_article_tables.py  generate_capacity_figures.py  generate_economic_figures.py  generate_figure_catalog.py  network_resilience_model.py  prepare_arxiv_submission.sh  stochastic_traffic_model.py  validate_notebooks.py
src/: __init__.py  baseline_analysis.py  bayesian_model.py  compound_effects.py  download_accident_data.py  event_study_analysis.py  generate_realistic_accident_data.py  generate_realistic_accident_data_v2.py  merge_production_data.py  network_analysis.py
tests/: conftest.py  test_data_loader.py
(+125 files in other folders)
